--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -5,5 +5,6 @@
 @import './services/services';
 @import './main-header/main-header';
 @import './main-banner/main-banner';
+@import './order/order';
 @import './modal/modal';
 @import './callback/callback';
