--- a/src/components/main-banner/main-banner.hbs
+++ b/src/components/main-banner/main-banner.hbs
@@ -1,8 +1,11 @@
-<div class="main-banner">
-    <div class="container main-banner__container">
-        <div class="main-banner__services">
-            {{> services }}
+<section class="main-banner">
+    {{> main-header }}
+    <div class="main-banner__area">
+        <div class="container main-banner__container">
+            <div class="main-banner__services">
+                {{> services }}
+            </div>
         </div>
     </div>
-</div>
+</section>
 
