--- a/src/components/main-header/main-header.hbs
+++ b/src/components/main-header/main-header.hbs
@@ -20,9 +20,11 @@
             </div>
         </div>
     </div>
-    <div class="main-header__nav">
-        <div class="container">
-            {{> nav }}
+    <div class="main-header__menu">
+        <div class="container main-header__menu-container">
+            <div class="main-header__nav">
+                {{> nav }}
+            </div>
         </div>
     </div>
 </header>
