--- a/src/components/main-header/main-header.scss
+++ b/src/components/main-header/main-header.scss
@@ -1,4 +1,9 @@
 .main-header {
+  transition: $delay;
+
+  .is-open {
+    display: block;
+  }
 
   &_sticky {
     background: darken(#00bff3, 5%);
@@ -109,12 +114,15 @@
     }
   }
 
-  &__nav {
+  &__menu {
     background: #3fa926;
     box-shadow: -1px 2px 9px rgba(0, 0, 0, 0.1);
+  }
+
+  &__nav {
 
     @media(max-width: 992px) {
-      //display: none;
+      display: none;
     }
   }
 
