.action html code finished

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -5,6 +5,9 @@
 @import './services/services';
 @import './main-header/main-header';
 @import './main-banner/main-banner';
+@import './main-content/main-content';
 @import './order/order';
+@import './video/video';
+@import './action/action';
 @import './modal/modal';
 @import './callback/callback';
