--- a/src/components/order/order.hbs
+++ b/src/components/order/order.hbs
@@ -11,6 +11,7 @@
                    </p>
                </li>
                 <img src="./images/delimiter.png" alt="" class="order__delimiter">
+                <img src="./images/vert_delimiter.png" alt="" class="order__delimiter2">
                 <li class="order__item">
                     <img src="./images/order2.png" alt="" class="order__img">
                     <p class="order__description">
@@ -18,6 +19,7 @@
                     </p>
                 </li>
                 <img src="./images/delimiter2.png" alt="" class="order__delimiter">
+                <img src="./images/vert_delimiter2.png" alt="" class="order__delimiter2">
                 <li class="order__item">
                     <img src="./images/order3.png" alt="" class="order__img">
                     <p class="order__description order__description_light">
