--- a/src/components/action/action.hbs
+++ b/src/components/action/action.hbs
@@ -5,21 +5,21 @@
             До 31 октября установка окон - <a href="#" class="action__link">бесплатно</a>
         </div>
         <p class="action__content">До конца акции:</p>
-        <ul class="action__time">
+        <ul class="action__time" id="getting-started">
             <li class="action__time-item">
-                <div class="action__time-value">12</div>
+                <div class="action__time-value" id="clock-days"></div>
                 <div class="action__time-text">дн.</div>
             </li>
             <li class="action__time-item">
-                <div class="action__time-value">24</div>
+                <div class="action__time-value" id="clock-hours"></div>
                 <div class="action__time-text">час.</div>
             </li>
             <li class="action__time-item">
-                <div class="action__time-value">57</div>
+                <div class="action__time-value" id="clock-minutes"></div>
                 <div class="action__time-text">мин.</div>
             </li>
             <li class="action__time-item">
-                <div class="action__time-value">02</div>
+                <div class="action__time-value" id="clock-seconds"></div>
                 <div class="action__time-text">сек.</div>
             </li>
         </ul>
