.video html coding finished

--- a/src/components/order/order.scss
+++ b/src/components/order/order.scss
@@ -1,6 +1,6 @@
 .order {
-  //margin-top: -92px;
-  //position: absolute;
+  margin-top: -92px;
+  padding-bottom: 22px;
 
   &__container {
     display: flex;
