--- a/src/components/main-content/main-content.scss
+++ b/src/components/main-content/main-content.scss
@@ -1,8 +1,8 @@
 .main-content {
   background: url('./../images/bg__main-content.png') top center no-repeat;
   min-height: 500px;
-  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
