.video__slider is ready

--- a/src/components/main-banner/main-banner.scss
+++ b/src/components/main-banner/main-banner.scss
@@ -1,5 +1,5 @@
 .main-banner {
-  //max-height: 100vh;
+  max-height: 100vh;
 
   &__area {
     background: url("./../images/bg_main-banner.jpg") top center no-repeat;
