--- a/src/assets/styles/plugins/index.scss
+++ b/src/assets/styles/plugins/index.scss
@@ -1,3 +1,4 @@
+@import '../../../../node_modules/rangeslider.js/dist/rangeslider';
 @import 'fonts.scss';
 @import 'vex.scss';
 @import 'slick.scss';
