--- a/src/components/video/video.hbs
+++ b/src/components/video/video.hbs
@@ -1,11 +1,26 @@
 <div class="video">
-    <div class="container video__cintainer">
+    <div class="container video__container">
         <h2 class="video__title">Видео</h2>
         <div class="video__list">
             <div class="video__item">
                 <div class="video__item-clip">
                     <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/Er3b04ykexg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
                     <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video3.jpg" alt="" class="video__item-img">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -47,22 +62,174 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="video__item">-->
-                <!--<div class="video__item-clip">-->
-                    <!--&lt;!&ndash;<iframe width="370" height="240" src="https://www.youtube.com/embed/uw-gecBFMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>&ndash;&gt;-->
-                    <!--<img src="./images/video1.jpg" alt="" class="video__item-img">-->
-                <!--</div>-->
-                <!--<div class="video__item-thumbler"></div>-->
-                <!--<div class="video__item-content">-->
-                    <!--<div class="video__item-title">-->
-                        <!--Таким образом реализация намеченных плановых заданий-->
-                    <!--</div>-->
-                    <!--<div class="video__item-description">-->
-                        <!--Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/uw-gecBFMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/Er3b04ykexg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video3.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/pINxK7hUkJU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video2.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video3.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/uw-gecBFMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/Er3b04ykexg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video3.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/pINxK7hUkJU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video2.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/rH_G02lB4nI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video3.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
+            <div class="video__item">
+                <div class="video__item-clip">
+                    <!--<iframe width="370" height="240" src="https://www.youtube.com/embed/uw-gecBFMdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <div class="video__item-thumbler"></div>
+                </div>
+                <div class="video__item-content">
+                    <div class="video__item-title">
+                        Таким образом реализация намеченных плановых заданий
+                    </div>
+                    <div class="video__item-description">
+                        Не следует, однако забывать, что начало повседневной работы по формированию позиции способствует подготовки и реализации системы обучения кадров
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="video__slider"></div>
+        <div class="video__slider">
+            <input type="range" min="1" max="15" step="1" id="video-range" name="example_name" value="1" />
+        </div>
     </div>
 </div>
