--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -24,10 +24,6 @@
     &:hover {
       cursor: pointer;
 
-      .video__item-clip {
-        position: relative;
-      }
-
       .video__item-title {
         color: #43aa26;
         font-family: 'Roboto', sans-serif;
@@ -37,11 +33,7 @@
       }
 
       .video__item-thumbler {
-        height: 50px;
-        width: 50px;
         background-image: url('./../images/play_hover.png');
-        bottom: -25px;
-        position: absolute;
       }
     }
 
@@ -58,15 +50,17 @@
       position: absolute;
     }
 
-    &-img {
-      width: 370px;
-      height: 240px;
+    &-clip {
+      width: 100%;
+      max-width: 370px;
+      height: auto;
     }
+
 
     &-content {
       padding-left: 65px;
       padding-right: 20px;
-      padding-bottom: 40px;
+      padding-bottom: 42px;
     }
 
     &-title {
@@ -78,7 +72,6 @@
     }
 
     &-description {
-      height: 64px;
       color: #2f3131;
       font-family: 'Roboto', sans-serif;
       font-size: 14px;
@@ -91,4 +84,31 @@
     height: 3px;
     padding-bottom: 20px;
   }
+
+  .rangeslider {
+    &--horizontal {
+      height: 3px;
+      background-color: #b9bdc8;
+    }
+
+    &__fill {
+      background-color: #43aa26;
+    }
+
+    &__handle {
+      top: -15px;
+      border-radius: 0;
+      width: 34px;
+      height: 34px;
+      border: 2px solid #42a825;
+      background-color: #ffffff;
+      transform: rotate(45deg);
+
+      &:after {
+        background: #fff;
+      }
+    }
+
+  }
+
 }
