--- a/src/components/order/order.hbs
+++ b/src/components/order/order.hbs
@@ -1,6 +1,8 @@
 <div class="order">
     <div class="container order__container">
-        <img src="./images/windows.jpg" alt="" class="order__picture">
+        <div class="order__picture">
+            <img src="./images/windows.jpg" alt="">
+        </div>
         <div class="order__steps">
             <h2 class="order__title">Как сделать заказ?</h2>
             <ul class="order__list">
