--- a/src/components/order/order.scss
+++ b/src/components/order/order.scss
@@ -9,6 +9,20 @@
   }
 
   &__picture {
+    position: relative;
+
+    &:before {
+      top: -3px;
+      left: -3px;
+      position: absolute;
+      content:'';
+      height: 68px;
+      width: 68px;
+      border: 6px solid #43aa26;;
+      border-right-color: transparent;
+      border-bottom-color: transparent;
+    }
+
     @media(max-width: 1200px) {
       display: none;
     }
@@ -38,6 +52,8 @@
     text-transform: uppercase;
     text-align: center;
     padding-bottom: 28px;
+    padding-left: 15px;
+    padding-right: 15px;
 
     @media(max-width: 768px) {
       padding-top: 40px;
