--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -12,8 +12,8 @@
   }
 
   &__list {
-    display: flex;
-    justify-content: space-between;
+    margin-left: -15px;
+    margin-right: -15px;
   }
 
 
@@ -39,7 +39,7 @@
 
     &-clip {
       position: relative;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
 
     &-thumbler {
@@ -60,7 +60,7 @@
     &-content {
       padding-left: 65px;
       padding-right: 20px;
-      padding-bottom: 42px;
+      padding-bottom: 33px;
     }
 
     &-title {
@@ -82,7 +82,6 @@
 
   &__slider {
     height: 3px;
-    padding-bottom: 20px;
   }
 
   .rangeslider {
@@ -105,10 +104,18 @@
       transform: rotate(45deg);
 
       &:after {
-        background: #fff;
+        height: 20px;
+        width: 20px;
+        transform: rotate(-45deg);
+        background: url('./../images/arrows.png') center center no-repeat;
       }
     }
 
   }
+
+  //.slick-slide {
+  //  width: 100%;
+  //  max-width: 388px;
+  //}
 
 }
