--- a/src/components/video/video.hbs
+++ b/src/components/video/video.hbs
@@ -4,7 +4,7 @@
         <div class="video__list">
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <img src="./images/video1.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -18,7 +18,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video3.jpg" alt="" class="video__item-img">
+                    <img src="./images/video3.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -32,7 +32,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video2.jpg" alt="" class="video__item-img">
+                    <img src="./images/video2.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -46,7 +46,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video3.jpg" alt="" class="video__item-img">
+                    <img src="./images/video3.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -60,7 +60,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <img src="./images/video1.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -74,7 +74,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <img src="./images/video1.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -88,7 +88,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video3.jpg" alt="" class="video__item-img">
+                    <img src="./images/video3.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -102,7 +102,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video2.jpg" alt="" class="video__item-img">
+                    <img src="./images/video2.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -116,7 +116,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video3.jpg" alt="" class="video__item-img">
+                    <img src="./images/video3.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -130,7 +130,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <img src="./images/video1.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -144,7 +144,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <img src="./images/video1.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -158,7 +158,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video3.jpg" alt="" class="video__item-img">
+                    <img src="./images/video3.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -172,7 +172,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video2.jpg" alt="" class="video__item-img">
+                    <img src="./images/video2.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -186,7 +186,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video3.jpg" alt="" class="video__item-img">
+                    <img src="./images/video3.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
@@ -200,7 +200,7 @@
             </div>
             <div class="video__item">
                 <div class="video__item-clip">
-                    <img src="./images/video1.jpg" alt="" class="video__item-img">
+                    <img src="./images/video1.jpg" alt="">
                     <div class="video__item-thumbler"></div>
                 </div>
                 <div class="video__item-content">
