--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -21,6 +21,11 @@
     padding-right: 15px;
     padding-left: 15px;
 
+    @media (max-width: 1200px) {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
     &:hover {
       cursor: pointer;
 
@@ -40,6 +45,9 @@
     &-clip {
       position: relative;
       margin-bottom: 20px;
+      //width: 100%;
+      //max-width: 370px;
+      //height: auto;
     }
 
     &-thumbler {
@@ -50,17 +58,13 @@
       position: absolute;
     }
 
-    &-clip {
-      width: 100%;
-      max-width: 370px;
-      height: auto;
-    }
-
-
     &-content {
       padding-left: 65px;
       padding-right: 20px;
       padding-bottom: 33px;
+      width: 100%;
+      max-width: 370px;
+      height: auto;
     }
 
     &-title {
@@ -82,6 +86,10 @@
 
   &__slider {
     height: 3px;
+
+    @media(max-width: 1240px) {
+      display: none;
+    }
   }
 
   .rangeslider {
