--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -1,6 +1,7 @@
 .video {
   padding-top: 25px;
-  padding-bottom: 43px;
+  padding-bottom: 40px;
+  //display: none;
 
   &__title {
     color: #2f3131;
@@ -20,11 +21,7 @@
   &__item{
     padding-right: 15px;
     padding-left: 15px;
-
-    @media (max-width: 1200px) {
-      padding-left: 0;
-      padding-right: 0;
-    }
+    margin-bottom: 30px;
 
     &:hover {
       cursor: pointer;
@@ -42,12 +39,14 @@
       }
     }
 
+    @media (max-width: 1200px) {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
     &-clip {
       position: relative;
-      margin-bottom: 20px;
-      //width: 100%;
-      //max-width: 370px;
-      //height: auto;
+      margin-bottom: 12px;
     }
 
     &-thumbler {
@@ -61,7 +60,7 @@
     &-content {
       padding-left: 65px;
       padding-right: 20px;
-      padding-bottom: 33px;
+      padding-bottom: 6px;
       width: 100%;
       max-width: 370px;
       height: auto;
