--- a/src/components/action/action.scss
+++ b/src/components/action/action.scss
@@ -4,6 +4,9 @@
 
   @media(max-width: 800px) {
     background: url('./../images/actions_800.jpg') top center no-repeat;
+    background-color: rgba(0,0,0,.5);
+    background-blend-mode: darken;
+    background-size: cover;
   }
 
   &__container {
@@ -17,6 +20,10 @@
     font-weight: 700;
     text-transform: uppercase;
     padding-bottom: 36px;
+
+    @media(max-width: 768px) {
+      text-shadow: 1px 1px 0 #4e4747, 1px -1px 0 #4e4747, -1px 1px 0 #4e4747, -1px -1px 0 #4e4747;
+    }
   }
 
   &__description {
@@ -27,6 +34,10 @@
     font-size: 14px;
     font-weight: 400;
     padding-bottom: 57px;
+
+    @media(max-width: 768px) {
+      text-shadow: 1px 1px 0 #4e4747, 1px -1px 0 #4e4747, -1px 1px 0 #4e4747, -1px -1px 0 #4e4747;
+    }
   }
 
   &__link {
@@ -34,6 +45,10 @@
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-weight: 700;
+
+    @media(max-width: 768px) {
+      text-shadow: 1px 1px 0 #4e4747, 1px -1px 0 #4e4747, -1px 1px 0 #4e4747, -1px -1px 0 #4e4747;
+    }
   }
 
   &__content {
@@ -41,6 +56,10 @@
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 400;
+
+    @media(max-width: 768px) {
+      text-shadow: 1px 1px 0 #4e4747, 1px -1px 0 #4e4747, -1px 1px 0 #4e4747, -1px -1px 0 #4e4747;
+    }
   }
 
   &__time {
