--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -3,6 +3,21 @@
   padding-bottom: 40px;
   //display: none;
 
+  &__container {
+    @media(max-width: 1220px) {
+      max-width: 780px;
+    }
+
+    @media(max-width: 800px) {
+      max-width: 500px;
+    }
+
+    @media(max-width: 480px) {
+      max-width: 300px;
+    }
+
+  }
+
   &__title {
     color: #2f3131;
     font-family: 'Cuprum', sans-serif;
@@ -15,6 +30,10 @@
   &__list {
     margin-left: -15px;
     margin-right: -15px;
+
+    @media(max-width: 1200px) {
+      margin: 0 auto;
+    }
   }
 
 
@@ -22,6 +41,19 @@
     padding-right: 15px;
     padding-left: 15px;
     margin-bottom: 30px;
+
+    @media(max-width: 1220px) {
+      margin-left: 15px;
+      margin-right: 15px;
+      width: auto!important;
+    }
+
+    @media(max-width: 800px) {
+      margin-left: 10px;
+      margin-right: 10px;
+      margin-bottom: 60px;
+      width: auto!important;
+    }
 
     &:hover {
       cursor: pointer;
@@ -63,7 +95,6 @@
       padding-bottom: 6px;
       width: 100%;
       max-width: 370px;
-      height: auto;
     }
 
     &-title {
@@ -85,10 +116,6 @@
 
   &__slider {
     height: 3px;
-
-    @media(max-width: 1240px) {
-      display: none;
-    }
   }
 
   .rangeslider {
