.menu-toggle refactored

--- a/src/assets/styles/plugins/index.scss
+++ b/src/assets/styles/plugins/index.scss
@@ -1,4 +1,5 @@
 @import '../../../../node_modules/rangeslider.js/dist/rangeslider';
+@import '../../../../node_modules/jquery-ui/themes/base/slider';
 @import 'fonts.scss';
 @import 'vex.scss';
 @import 'slick.scss';
