--- a/src/components/main-header/main-header.hbs
+++ b/src/components/main-header/main-header.hbs
@@ -2,7 +2,9 @@
     <div class="container main-header__container">
         <div class="main-header__top">
             <div class="main-header__logo">
-                <img src="./images/logo.png" alt="" class="main-header__logo-icon">
+                <a href="/" class="main-header__logo-link">
+                    <img src="./images/logo.png" alt="" class="main-header__logo-icon">
+                </a>
                 <div class="main-header__logo-title">Inside Windows</div>
             </div>
             <h1 class="main-header__slogan">
