--- a/src/components/main-header/main-header.scss
+++ b/src/components/main-header/main-header.scss
@@ -2,10 +2,6 @@
   background: #fff;
   transition: $delay;
 
-  .is-open {
-    display: block;
-  }
-
   &_sticky {
     background: darken(#00bff3, 5%);
     min-height: 60px;
@@ -121,11 +117,27 @@
   }
 
   &__nav {
+    transition: $delay;
 
     @media(max-width: 992px) {
       display: none;
     }
   }
+
+  .is-open {
+    display: block;
+
+
+    .nav {
+      left: 0;
+      top: 87px;
+      bottom: 0;
+      right: 0;
+      z-index: 555;
+      position: fixed;
+    }
+  }
+
 
   &__menu-toggle {
     display: none;
