--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -165,3 +165,14 @@
   }
 
 }
+
+#custom-handle {
+  display: block;
+  width: 3em;
+  height: 1.6em;
+  top: 50%;
+  margin-top: -.8em;
+  text-align: center;
+  line-height: 1.6em;
+}
+
