--- a/src/components/video/video.hbs
+++ b/src/components/video/video.hbs
@@ -216,8 +216,8 @@
         <div class="video__slider">
             <input type="range" min="1" max="15" step="1" id="video-range" name="example_name" value="1" />
         </div>
-        <div id="slider" class="video__slider">
-            <div id="custom-handle" class="ui-slider-handle"></div>
-        </div>
+        <!--<div id="slider" class="video__slider">-->
+            <!--<div id="custom-handle" class="ui-slider-handle"></div>-->
+        <!--</div>-->
     </div>
 </div>
