--- a/src/assets/styles/plugins/index.scss
+++ b/src/assets/styles/plugins/index.scss
@@ -1,5 +1,6 @@
 @import '../../../../node_modules/rangeslider.js/dist/rangeslider';
 //@import '../../../../node_modules/jquery-ui-dist/jquery-ui.min';
+@import '../../../../node_modules/owl.carousel/dist/assets/owl.carousel';
 @import 'fonts.scss';
 @import 'vex.scss';
 @import 'slick.scss';
