--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -17,7 +17,12 @@
   box-shadow: inset 0 -3px 0 #2c8a12;
 
   &:hover {
-    background: darken(#43aa26,15%);
+    opacity: 0.8;
+  }
+
+  &:active {
+    transform: translate(0, 3px);
+    box-shadow: none;
   }
 
   &__icon{
