--- a/src/components/video/video.hbs
+++ b/src/components/video/video.hbs
@@ -217,8 +217,7 @@
         </div>
 
         <div class="video__slider">
-            <input type="range" value="0"
-                   id="video-range" name="example_name"  />
+            <input id="video-range" type="range" value="0">
         </div>
     </div>
 </div>
