--- a/src/components/video/video.scss
+++ b/src/components/video/video.scss
@@ -1,6 +1,7 @@
 .video {
   padding-top: 25px;
   padding-bottom: 40px;
+  width: 100%;
 
   &__container {
 
@@ -53,18 +54,9 @@
     padding-right: 15px;
     margin-bottom: 31px;
 
-    //@media(max-width: 1220px) {
-    //  margin-left: 15px;
-    //  margin-right: 15px;
-    //  width: auto!important;
-    //}
-    //
-    //@media(max-width: 800px) {
-    //  margin-left: 10px;
-    //  margin-right: 10px;
-    //  margin-bottom: 60px;
-    //  width: auto!important;
-    //}
+    @media(max-width: 400px) {
+      width: 300px;
+    }
 
     &:hover {
       cursor: pointer;
